--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "antd": "^5.15.3",
     "aos": "^3.0.0-beta.6",
     "react": "^18.2.0",
+    "react-axios": "^2.0.6",
     "react-dom": "^18.2.0",
-    "react-icons": "^5.0.1"
+    "react-icons": "^5.0.1",
+    "styled-components": "^6.1.8"
   },
   "devDependencies": {
     "@types/react": "^18.2.64",
