--- a/package.json
+++ b/package.json
@@ -16,7 +16,11 @@
     "react-axios": "^2.0.6",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
-    "styled-components": "^6.1.8"
+    "react-scroll": "^1.9.0",
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1",
+    "styled-components": "^6.1.8",
+    "swiper": "^11.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.64",
